--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/scripts.js" defer></script>
     <title>Tabuada JS</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!--Parte de cima-->
+    <h2>Digite um número e confirme para gerar uma tabuada</h2>
+    <form id="multiplication-form">
+      <div class="form-control">
+        <label for="number">Tabuada do:</label>
+        <input type="number" name="number" id="number" placeholder="3" />
+      </div>
+      <div class="form-control">
+        <label for="multiplicator">Multiplicar até:</label>
+        <input
+          type="number"
+          name="multiplicator"
+          id="multiplicator"
+          value="10"
+        />
+      </div>
+      <input type="submit" value="Calcular">
+    </form>
+    <!--Parte de baixo-->
+    <div id="multiplication-table">
+        <h2 id="multiplication-title">Tabuada do número: <span></span></h2>
+        <div id="multiplication-operations">
+            <p>Informe um número para calcular uma tabuada...</p>
+            <div class="row">
+                <div class="operations">5 x 1 = </div>
+                <div class="result">5</div>
+            </div>
+        </div>
+            <div class="row">
+                <div class="operations">5 x 2 = </div>
+                <div class="result">10</div>
+            </div>
+        </div>
+    </div>
+  </body>
 </html>
